tests/golden/type_errors/generic_lambda_uninferred_type_parameter.cd
let make = fun<T>(): T? { return nil; };
make();
