tests/golden/type_errors/generic_lambda_uninferred_type_parameter.err
Type error at 2:6: cannot infer type parameter T
  make();
       ^
